--- a/interviewer.app/src/index.css
+++ b/interviewer.app/src/index.css
@@ -3,6 +3,8 @@
  * Copyright 2013-2017 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-clean-blog/blob/master/LICENSE)
  */
+ @import '~toastr/build/toastr.css';
+
  body {
   font-size: 20px;
   color: #333333;
