add some comments component and fetch comments for every question

--- a/interviewer.app/public/css/main.css
+++ b/interviewer.app/public/css/main.css
@@ -441,6 +441,10 @@ sm {
   margin: 0 auto;
 }
 
+.display-inline {
+  display: inline-block;
+}
+
 #login-form {
   width: 350px;
   margin: 0 auto;
